# EnjoyKnowledge

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  justfile  rustfmt.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
daily/: 2026-06-28-enjoyknowledge-v0.4.10-complete.md  2026-06-28-enjoyknowledge-v0.4.3-complete.md  2026-06-28-enjoyknowledge-v0.4.4-complete.md  2026-06-28-enjoyknowledge-v0.4.5-complete.md  2026-06-28-enjoyknowledge-v0.4.6-complete.md  2026-06-28-enjoyknowledge-v0.4.7-complete.md  2026-06-28-enjoyknowledge-v0.4.8-complete.md  2026-06-29-enjoyknowledge-v0.4.9-complete.md
docs/: CHANGELOG.md  CONTEXTFLOW-SPEC.md  D6-SNAPSHOT-SPEC.md  DESIGN-PHILOSOPHY.md  DESIGN-V3.md  GLOSSARY.md  INTERFACE-SPEC.md  KNOWLEDGE-ARCHITECTURE.md  MARKET-RESEARCH-ADDENDUM-2-2026-06-19.md  MARKET-RESEARCH-ADDENDUM-2026-06-19.md  MARKET-RESEARCH-ADDENDUM-3-2026-06-19.md  POSITIONING.md  PRODUCT-DESIGN.md  README.md  SCENARIO-TEMPLATES.md  SYSTEM-DESIGN.md
docs/00-vision/: POSITIONING.md  ROADMAP.md  directory-design-rationale.md
docs/01-philosophy/: DESIGN-PHILOSOPHY.md  GLOSSARY.md
docs/02-design/: DESIGN-V3.md.bak  DESIGN.md  INTERFACE-SPEC.md  PRODUCT-DESIGN.md.bak
docs/03-discussion/: 2026-06-27-3mechanisms.md  2026-06-27-for-coding-complete.md  2026-06-27-for-coding-deep.md  2026-06-27-rule-core.md  README.md
docs/04-changelog/: CHANGELOG.md
docs/research/: MARKET-RESEARCH-2026Q2.md  MARKET-RESEARCH-ADDENDUM-3-2026-06-19.md  SCENARIO-TEMPLATES.md
src/: config.rs  kinds.rs  main.rs
src/cli/: add.rs  args.rs  cat.rs  doctor.rs  export.rs  grep.rs  init.rs  kind.rs  ls.rs  mod.rs  onboard.rs  promote.rs  record.rs  search.rs  stage_clean.rs  tree.rs  workflow.rs
src/core/: mod.rs  profile.rs  template.rs
src/doctor/: archive.rs  budget.rs  checks.rs  dedup.rs  fix.rs  mod.rs
src/fixtures/: kinds-default.md  stage-defaults.md
src/format/: document.rs  frontmatter.rs  mod.rs
src/init/: ai_tools.rs  describe.rs  mod.rs  scan.rs  skeleton.rs  templates.rs
src/knowledge/: filesystem.rs  index.rs  mod.rs  source.rs  types.rs
src/profile/: coding.rs
src/record/: router.rs
src/template/: filesystem.rs
tests/: cli.rs  integration.rs
tests/cmd/: capture-missing-field.toml  capture-missing-field.trycmd  capture-success.toml  capture-success.trycmd  doctor-clean-pass.toml  doctor-export-consistency-warn.trycmd  doctor-frontmatter-error.trycmd  doctor-required-field-error.trycmd  export-auto-defaults-claude.toml  export-auto-defaults-claude.trycmd  export-claude.toml  export-claude.trycmd  export-codex-unsupported.toml  export-codex-unsupported.trycmd  export-cursor.toml  export-cursor.trycmd  export-dry-run.toml  export-dry-run.trycmd  export-mixed-tools.stdout  export-mixed-tools.toml  fix-frontmatter-fillable.stderr  fix-frontmatter-fillable.toml  fix-no-violations.stderr  fix-no-violations.toml  init-ai-generic.toml  init-ai-generic.trycmd  init-creates-skeleton.toml  init-creates-skeleton.trycmd  init-template-list.toml  init-template-list.trycmd  kind-add.stdout  kind-add.toml  kind-list.stdout  kind-list.toml  kind-rm.stdout  kind-rm.toml  onboard-missing-ek.toml  onboard-ok.stdout  onboard-ok.toml  onboard.toml  (+22 more)
(+84 files in other folders)
