[package]
name = "enjoyflow"
version = "0.1.0"
edition = "2021"
description = "工程团队的人机共享任务上下文层 — CLI 工具"
license = "MIT"
repository = "https://github.com/enjoyflow/enjoyflow"
homepage = "https://enjoyflow.dev"
documentation = "https://docs.enjoyflow.dev"
readme = "README.md"
keywords = ["cli", "knowledge-management", "ai", "context-engineering", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
authors = ["EnjoyFlow Team"]

[[bin]]
name = "enjoyflow"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --describe LLM 调用 (通过 feature flag 控制)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }
tokio = { version = "1", features = ["rt", "macros"], optional = true }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[features]
default = []
llm = ["reqwest", "tokio"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
# 对 stub 阶段放宽
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
