[package]
name = "enjoyknowledge"
version = "0.1.0"
edition = "2021"
description = "AI ?????????? ? CLI ??"
license = "MIT"
repository = "https://github.com/enjoyknowledge/enjoyknowledge"
homepage = "https://enjoyknowledge.dev"
documentation = "https://docs.enjoyknowledge.dev"
readme = "README.md"
keywords = ["cli", "knowledge-management", "ai", "context-engineering", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
authors = ["EnjoyKnowledge Team"]

[[bin]]
name = "enjoyknowledge"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
colored = "3"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --describe LLM ?? (?? feature flag ??)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }
tokio = { version = "1", features = ["rt", "macros"], optional = true }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
trycmd = "1.2"

[features]
default = []
llm = ["reqwest", "tokio"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# ? stub ????
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
